feat: 代码交互优化;

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
 	.card-container {
-		@apply p-4 m-2 shadow-lg rounded bg-white;
+		@apply p-4 m-2 shadow-lg rounded bg-white hover:shadow-xl;
 	}
 }
 
